--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AppActivity" />
         <activity android:name=".LocationFragment" />
         <activity android:name=".PronosticoFragment" />
         <activity android:name=".FutureFragment" />
