--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,6 +30,8 @@
         <activity android:name=".PronosticoFragment"
             tools:ignore="Instantiatable" />
         <activity android:name=".FutureFragment"
+            tools:ignore="Instantiatable" />
+        <activity android:name=".LocationAdapter"
             tools:ignore="Instantiatable" />
 
 
